# concept-extractor

./: .gitignore  README.md
concept_extractor/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
concept_extractor/concept_extractor/: __init__.py
concept_extractor/concept_extractor/graph/: __init__.py  person_extractor.py
concept_extractor/cpp/bindings/: graph.cpp  graph_c.cpp  graph_c.h
concept_extractor/cpp/include/graph/: morph.h  person_extractor.h
concept_extractor/cpp/src/graph/: morph.cpp  person_extractor.cpp
concept_extractor/cpp/tests/: test_harness.h  test_main.cpp
concept_extractor/cpp/tests/cpp/: person_extractor_rules_test.cpp
examples/: example.py
